// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Test home route 1`] = `
.lights-5 {
  width: 500px;
  margin: 0 auto;
  padding: 15px;
  text-align: center;
}

.lights-8 {
  width: 500px;
  margin: 15px auto;
}

.lights-2 {
  display: inline-block;
}

.lights-1 {
  padding: 15px;
  color: #00a68f;
  font-size: 18px;
}

.lights-0 {
  display: block;
  width: 252px;
  height: 252px;
  margin: 15px auto;
  background: url(file-stub);
}

.lights-6 + .lights-6 {
  padding-top: 15px;
}

<div>
  <i
    class="lights-0"
  />
  <ul
    class="lights-5"
  >
    <li
      class="lights-2"
    >
      <a
        class="lights-1"
        href="/"
      >
        Home
      </a>
    </li>
    <li
      class="lights-2"
    >
      <a
        class="lights-1"
        href="/tools"
      >
        Tools
      </a>
    </li>
  </ul>
  <div
    class="lights-8"
  >
    <section>
      <p
        class="lights-6"
      >
        Welcome to the 
        <strong>
          Universal React Starter-kyt
        </strong>
        . This starter kyt should serve as the base for an advanced, server-rendered React app.
      </p>
      <p
        class="lights-6"
      >
        Check out the Tools section for an outline of the libraries that are used in this Starter-kyt.
      </p>
    </section>
  </div>
</div>
`;

exports[`App Test home route 2`] = `
Array [
  "../Home",
]
`;

exports[`App Test tools route 1`] = `
.lights-5 {
  width: 500px;
  margin: 0 auto;
  padding: 15px;
  text-align: center;
}

.lights-11 {
  width: 500px;
  margin: 15px auto;
}

.lights-2 {
  display: inline-block;
}

.lights-1 {
  padding: 15px;
  color: #00a68f;
  font-size: 18px;
}

.lights-0 {
  display: block;
  width: 252px;
  height: 252px;
  margin: 15px auto;
  background: url(file-stub);
}

.lights-6 + .lights-6 {
  padding-top: 5px;
}

<div>
  <i
    class="lights-0"
  />
  <ul
    class="lights-5"
  >
    <li
      class="lights-2"
    >
      <a
        class="lights-1"
        href="/"
      >
        Home
      </a>
    </li>
    <li
      class="lights-2"
    >
      <a
        class="lights-1"
        href="/tools"
      >
        Tools
      </a>
    </li>
  </ul>
  <div
    class="lights-11"
  >
    <ul>
      <li
        class="lights-6"
      >
        <a
          href="https://expressjs.com/"
        >
          Express
        </a>
         - server-side rendering
      </li>
      <li
        class="lights-6"
      >
        <a
          href="https://reactjs.org/"
        >
          React
        </a>
         - component library
      </li>
      <li
        class="lights-6"
      >
        <a
          href="https://reacttraining.com/react-router/"
        >
          React Router
        </a>
         - server and browser routing
      </li>
      <li
        class="lights-6"
      >
        <a
          href="https://github.com/nytimes/pretty-lights"
        >
          Pretty Lights
        </a>
         - CSS-in-JS with a reliable API
      </li>
      <li
        class="lights-6"
      >
        <a
          href="https://testing-library.com/docs/react-testing-library/intro/"
        >
          React Testing Library
        </a>
         
        - React component testing
      </li>
    </ul>
  </div>
</div>
`;

exports[`App Test tools route 2`] = `
Array [
  "../Tools",
]
`;
